# py-report-generator

./: README.md  pyproject.toml  requirements.txt  setup.py
.run/: black.run.xml  mypy.run.xml  pylint.run.xml  ruff.run.xml
src/reportgen/: elements.py  enums.py  layout.py  properties.py  report.py
src/reportgen/utils/: barcode128.py  base.py  model.py  pug_to_xml.py  xml_to_dict.py
src/reportgen/utils/data/: barcode128.csv
tests/: conftest.py
tests/elements/: test_barcode.py  test_column.py  test_image.py  test_line.py  test_row.py  test_text.py
tests/layout/: test_layout.py
tests/layout/data/: report_data.xml  report_with_namespace.xml
tests/layout/templates/: report.pug  report_with_namespace.pug
tests/report/: test_report.py
tests/utils/: __init__.py  test_pug_to_xml.py  test_pug_to_xml_with_namespace.py
tests/utils/data/: data.json  report_data.xml
venv311/: pyvenv.cfg
